crates/function-metrics/tests/ui/fail/track_caller_outer.stderr
error: `function_metrics` does not support `#[track_caller]`; instrumentation would change caller locations
 --> tests/ui/fail/track_caller_outer.rs:3:1
  |
3 | #[track_caller]
  | ^^^^^^^^^^^^^^^
